# axum-sample

./: Cargo.toml  Makefile.toml  compose.yaml  test.http
.github/workflows/: workflow.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/handler/: mod.rs  sample.rs
api/src/model/: sample.rs
api/src/route/: mod.rs  root.rs  sample.rs  v1.rs
api/tests/: root.rs  sample.rs
shared/: Cargo.toml
shared/src/: error.rs
src/: main.rs
