[package]
name = "axum-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
opentelemetry = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22" }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
tower-http = { version="0.6.8", features = ["trace"] }
