[package]
name = "axum-sample"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[workspace]
members = ["api", "shared"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
api = { path = "./api" }
shared = { path = "./shared" }
anyhow = { version = "1.0.100", default-features = false }
axum = { version = "0.8.7", features = ["http1", "tokio", "json"], default-features = false }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
tracing = { version = "0.1.43", default-features = false }
tracing-opentelemetry = { version = "0.32.0", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["fmt"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"], default-features = false }
tower-http = { version = "0.6.8", features = ["trace"] }
rstest = { version = "0.26.1", default-features = false }
tower = { version = "0.5.2" }
serde = { version = "1.0.228", features = ["derive"] }
garde = { version = "0.22.1", features = ["derive"] }
axum-valid = { version = "0.24.0" }
thiserror = { version = "2.0.17" }

[dependencies]
api.workspace = true
anyhow.workspace = true
axum.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-otlp.workspace = true
tower-http.workspace = true

