[package]
name = "api"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
shared.workspace = true
axum.workspace = true
serde.workspace = true
garde.workspace = true
axum-valid.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
anyhow.workspace = true
tower.workspace = true
